<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:dslv="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="c7081.quickclean.Home">

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newBtn"
        android:id="@+id/newBtn"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/editBtn"
        android:id="@+id/editBtn"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/newBtn" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/del"
        android:id="@+id/deleteBtn"
        android:layout_alignTop="@+id/remindBtn"
        android:layout_alignParentEnd="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exp"
        android:id="@+id/exportBtn"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@+id/editBtn" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cue"
        android:id="@+id/remindBtn"
        android:layout_alignTop="@+id/exportBtn"
        android:layout_toEndOf="@+id/exportBtn" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/springTV"
        android:layout_marginTop="21dp"
        android:id="@+id/newTV"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:layout_alignParentStart="true"
        android:text="test" />

    <TextView
        android:text="Spring Cleaning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/springTV"
        android:textSize="30sp"
        android:textColor="@android:color/black"
        android:textAlignment="viewStart"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


</RelativeLayout>
