<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <TextView
        android:text="Editing a schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView12"
        android:textAlignment="center"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/list"
        android:id="@+id/textView2"
        android:layout_marginLeft="@dimen/notification_subtext_size"
        android:textSize="25sp"
        android:layout_marginTop="10sp" />

    <Spinner
        android:layout_width="246dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:entries="@array/houses"
        android:layout_gravity="top|right"
        android:layout_marginBottom="10sp"
        android:layout_marginTop="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/room"
        android:id="@+id/textView3"
        android:layout_marginLeft="12dp"
        android:textSize="25sp" />

    <Spinner
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner2"
        android:layout_gravity="right"
        android:entries="@array/room"
        android:layout_marginBottom="10sp"
        android:layout_marginTop="10sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/itemName"
        android:id="@+id/textView4"
        android:textSize="25sp" />

    <EditText
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:hint="Curtains"
        android:textSize="23sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/freq"
        android:id="@+id/textView5"
        android:textSize="25sp" />

    <EditText
        android:layout_width="187dp"
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:hint="monthly" />

    <TextView
        android:text="On this day of the week:"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView13"
        android:textSize="25sp"
        android:textColor="@android:color/black" />

    <Spinner
        android:layout_width="249dp"
        android:layout_height="wrap_content"
        android:id="@+id/weekDayDD"
        android:spinnerMode="dropdown"
        android:entries="@array/daysOfWeek"
        android:nestedScrollingEnabled="true"

        android:dropDownSelector="#91da91"
        android:layout_gravity="right"
        android:layout_marginBottom="15sp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:text="@string/saveBtn"
        android:id="@+id/saveBtn"
        android:layout_gravity="right" />
</LinearLayout>