<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="true"
    android:padding="10dp">

    <TextView
        android:text="Exporting a schedule"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView14"
        android:textSize="20sp"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/list"
        android:id="@+id/textView6"
        android:allowUndo="false" />

    <Spinner
        android:layout_width="263dp"
        android:layout_height="wrap_content"
        android:id="@+id/spinner3"
        android:layout_gravity="center_horizontal"
        android:entries="@array/houses" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="export as a"
        android:id="@+id/textView7" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="PDF"
        android:id="@+id/checkBox" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CSV"
        android:id="@+id/checkBox2" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Text File"
        android:id="@+id/checkBox3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/email"
        android:id="@+id/textView8" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText3"
        android:hint="hello@mail.com" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ex"
        android:id="@+id/exportBtn"
        android:layout_gravity="right" />
</LinearLayout>